intermedia commit, people as external container

--- a/config/nginx/onlyoffice.conf
+++ b/config/nginx/onlyoffice.conf
@@ -31,11 +31,11 @@ server {
 	if ($http_x_rewriter_url != '') {
 			set $X_REWRITER_URL $http_x_rewriter_url ;
 	}
-	
+
 	gzip on;
 	gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript application/javascript;
 
-			
+
 	fastcgi_read_timeout    600;
 	fastcgi_send_timeout    600;
 	fastcgi_keep_conn on;
@@ -46,22 +46,22 @@ server {
 	fastcgi_param HTTP_X_REWRITER_URL $http_x_rewriter_url;
 	fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 	fastcgi_param PATH_INFO "";
-		
+
 	location / {
 		proxy_pass http://localhost:5001;
-		
+
 		location ~* /(manifest.json|service-worker.js|appIcon.png|bg-error.png) {
 			root $public_root;
 			try_files /$basename /index.html =404;
 		}
 	}
-				
+
 	location /sockjs-node {
 		proxy_set_header X-Real-IP  $remote_addr;
 		proxy_set_header X-Forwarded-For $remote_addr;
 		proxy_set_header Host $host;
 
-		proxy_pass http://localhost:5001; 
+		proxy_pass http://localhost:5001;
 
 		proxy_redirect off;
 
@@ -69,7 +69,7 @@ server {
 		proxy_set_header Upgrade $http_upgrade;
 		proxy_set_header Connection "upgrade";
 	}
-	
+
 	location /api/2.0 {
 		proxy_pass http://localhost:5000;
 		proxy_set_header X-REWRITER-URL $X_REWRITER_URL;
@@ -85,13 +85,13 @@ server {
 		proxy_pass http://localhost:5003;
 		proxy_set_header X-REWRITER-URL $X_REWRITER_URL;
 	}
-	
+
 	location /products {
 		location ~* /people {
-			#rewrite products/people/(.*) /$1  break;
+			rewrite products/people/(.*) /$1  break;
 			proxy_pass http://localhost:5002;
 			proxy_set_header X-REWRITER-URL $X_REWRITER_URL;
-		
+
 			location ~* /(sockjs-node|images|locales) {
 				rewrite products/people(.*)/(sockjs-node|images|locales)/(.*) /$2/$3  break;
 				proxy_set_header X-Real-IP  $remote_addr;
@@ -106,7 +106,7 @@ server {
 				proxy_set_header Upgrade $http_upgrade;
 				proxy_set_header Connection "upgrade";
 			}
-			
+
 			location ~* /(manifest.json|service-worker.js|appIcon.png|bg-error.png) {
 				root $public_root;
 				try_files /$basename /index.html =404;
